--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
 	<description>todos-backend</description>
 	<properties>
 		<java.version>17</java.version>
+		<target>17</target>
 	</properties>
 	<dependencies>
 		<dependency>
