--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,9 +4,9 @@
 # spring.datasource.url=jdbc:mysql://u9xu7qf3ozwvnrup:wuzJh5ubPR53RwzmzG2z@bfvsw7hgaoyhngma4jlj-mysql.services.clever-cloud.com:3306/bfvsw7hgaoyhngma4jlj
 # spring.datasource.username=u9xu7qf3ozwvnrup
 # spring.datasource.password=wuzJh5ubPR53RwzmzG2z
-spring.datasource.url=jdbc:mysql://yiadooo8sa8vhumt:eemtz8hrd8gnble1@ohunm00fjsjs1uzy.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/vnrrtiyw2j3ab6xk
-spring.datasource.username=yiadooo8sa8vhumt
-spring.datasource.password=eemtz8hrd8gnble1
+spring.datasource.url=jdbc:mysql://sandboxdb.c1ycgwocye37.ap-southeast-2.rds.amazonaws.com:3306/Todos
+spring.datasource.username=admin
+spring.datasource.password=password
 # spring.datasource.driver-class-name=com.mysql.cj.jdbc.driver
 # spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
