--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,13 @@
+spring.datasource.url=jdbc:mysql://siyudb.cju62cia0kvv.ap-southeast-2.rds.amazonaws.com:3306/todos_db
+spring.datasource.username=admin
+spring.datasource.password=passwordpass
+spring.jpa.hibernate.ddl-auto=update
 # spring.datasource.url=jdbc:mysql://localhost:3306/todos_db
+# spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 # spring.datasource.username=root
 # spring.datasource.password=aaaaaaaa
 # spring.datasource.url=jdbc:mysql://sandboxdb.c1ycgwocye37.ap-southeast-2.rds.amazonaws.com:3306/Todos
-# spring.datasource.username=admin
-# spring.datasource.password=password
-spring.datasource.url=jdbc:mysql://yiadooo8sa8vhumt:eemtz8hrd8gnble1@ohunm00fjsjs1uzy.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/vnrrtiyw2j3ab6xk
-spring.datasource.username=yiadooo8sa8vhumt
-spring.datasource.password=eemtz8hrd8gnble1
-spring.jpa.hibernate.ddl-auto=update
+# spring.datasource.url=jdbc:mysql://yiadooo8sa8vhumt:eemtz8hrd8gnble1@ohunm00fjsjs1uzy.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/vnrrtiyw2j3ab6xk
+# spring.datasource.username=yiadooo8sa8vhumt
+# spring.datasource.password=eemtz8hrd8gnble1
 # debug: true
